Fix Safari overflow behaviour of ParallaxCircles

--- a/src/components/parallaxCircles/index.scss
+++ b/src/components/parallaxCircles/index.scss
@@ -10,6 +10,7 @@
   border-radius: 50%;
   background-color: theme("colors.tertiary.default");
   overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .parallax-circles__inner {
